all buttons work except +/- and %

--- a/index.html
+++ b/index.html
@@ -10,38 +10,36 @@
 <body>
 
   <div class="resultContainer" style="color: rgb(255,255,255)"> 
-    <div class="equation"> 1 + 1 + 1 + 1 </div>
-    <div class="result"> Text </div> 
+    <div id="equation" class="equation"></div>
+    <div id="result" class="result">Calculator</div> 
   </div>
 
   <div class="container">
-    <div class="buttons" style="background-color: rgba(242, 242, 242,1);">%</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242,0.75);">+/-</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242, 0.4);">C</div>
-    <div class="buttons" style="background-color: rgba(140, 88, 219,1); color: rgb(255,255,255)">/</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242,0.7);">7</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242,0.6);">8</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242,0.5);">9</div>
-    <div class="buttons" style="background-color: rgba(140, 88, 219,1); color: rgb(255,255,255)">x</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242, 0.5);">4</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242,0.4);">5</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242,0.3);">6</div>
-    <div class="buttons" style="background-color: rgba(140, 88, 219,1); color: rgb(255,255,255)">-</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242,0.35);">1</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242,0.25);">2</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242,0.15);">3</div>
-    <div class="buttons" style="background-color: rgba(140, 88, 219,1); color: rgb(255,255,255)">+</div>
+    <div id="" class="buttons" style="background-color: rgba(242, 242, 242,1);">%</div>
+    <div id="" class="buttons" style="background-color: rgba(242, 242, 242,0.75);">+/-</div>
+    <div id="reset" class="buttons" style="background-color: rgba(242, 242, 242, 0.4);">C</div>
+    <div id="divide" class="buttons" style="background-color: rgba(140, 88, 219,1); color: rgb(255,255,255)">/</div>
+    <div id="seven" class="buttons" style="background-color: rgba(242, 242, 242,0.7);">7</div>
+    <div id="eight" class="buttons" style="background-color: rgba(242, 242, 242,0.6);">8</div>
+    <div id="nine" class="buttons" style="background-color: rgba(242, 242, 242,0.5);">9</div>
+    <div id="times" class="buttons" style="background-color: rgba(140, 88, 219,1); color: rgb(255,255,255)">x</div>
+    <div id="four" class="buttons" style="background-color: rgba(242, 242, 242, 0.5);">4</div>
+    <div id="five" class="buttons" style="background-color: rgba(242, 242, 242,0.4);">5</div>
+    <div id="six" class="buttons" style="background-color: rgba(242, 242, 242,0.3);">6</div>
+    <div id="minus" class="buttons" style="background-color: rgba(140, 88, 219,1); color: rgb(255,255,255)">-</div>
+    <div id="one" class="buttons" style="background-color: rgba(242, 242, 242,0.35);">1</div>
+    <div id="two" class="buttons" style="background-color: rgba(242, 242, 242,0.25);">2</div>
+    <div id="three" class="buttons" style="background-color: rgba(242, 242, 242,0.15);">3</div>
+    <div id="plus" class="buttons" style="background-color: rgba(140, 88, 219,1); color: rgb(255,255,255)">+</div>
   </div>
 
   <div class="containers">
-    <div class="buttons" style="background-color: rgba(242, 242, 242,0.2);">0</div>
-    <div class="buttons" style="background-color: rgba(242, 242, 242,0.1);">,</div>
-    <div class="buttons equals" style="color: rgb(255,255,255);">=</div>
+    <div id="zero" class="buttons" style="background-color: rgba(242, 242, 242,0.2);">0</div>
+    <div id="comma" class="buttons" style="background-color: rgba(242, 242, 242,0.1);">,</div>
+    <div id="equals" class="buttons equals" style="color: rgb(255,255,255);">=</div>
   <div>
     
-  <script>
-
-  </script>
+<script src="/script.js"></script>
   
 </body>
 </html>
