--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="equals" class="buttons equals" style="color: rgb(255,255,255);">=</div>
   <div>
     
-<script src="/script.js"></script>
+<script src="./script.js"></script>
   
 </body>
 </html>
